# xlsx-brick-tools

./: README.md  example.py  pyproject.toml
switch_brick_tools/: __init__.py
switch_brick_tools/common/: helpers.py  relationships.py  sparql_queries.py
switch_brick_tools/common/ontologies/Switch/1.0/: Brick-SwitchExtension.ttl
switch_brick_tools/common/ontologies/Switch/1.1.5/: Brick-SwitchExtension.ttl
switch_brick_tools/generator/: __init__.py  graph.py  triple_generator.py
switch_brick_tools/generator/modules/: helpers.py  triple_generator.py
switch_brick_tools/validator/: __init__.py  process.py  validators.py
switch_brick_tools/validator/ontologies/Switch/1.0/: Brick-SwitchExtension.ttl
