[tool.poetry]
name = "switch-brick-tools"
version = "0.1.0"
description = "Collection of tools to validate and generate building graph models from an Excel template"
authors = ["wcrd <11898748+wcrd@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
rdflib = "^6.2.0"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
